# diabetes-predictor

./: .dockerignore  Dockerfile  README.md  Untitled.ipynb  diabetes_prediction_nn.ipynb  diabetes_predictor.ipynb  final_model.pkl  main.py  make_your_predictions.py  pyproject.toml
models/neural_network/variables/: variables.index
neural_network/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_network/variables/: variables.data-00000-of-00001
notebooks/: diabetes_prediction.ipynb
src/: app.py  make_your_predictions.py
src/static/css/: style.css
src/templates/: error.html  index.html  result.html
