[project]
name = "diabetes-predictor"
version = "0.1.0"
description = "A web application for predicting diabetes risk based on various health factors."
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "flask>=3.1.2",
    "joblib==1.3.0",
    "numpy==1.25.0",
    "pandas==1.3.0",
    "scikit-learn==1.3.0",
]
